# mcp-streamable-http-quickstart

./: README.md
mcp-client-python/: mcpclient.py  pyproject.toml
weather-server-python/: pyproject.toml  weather.py
